--- a/.github/workflows/otp_workflow.yml
+++ b/.github/workflows/otp_workflow.yml
@@ -34,11 +34,11 @@ jobs:
           echo "OTP script is running...";
           if [ -f otp_log.txt ]; then
             cat otp_log.txt;
-            git config --global user.email "your-email@example.com"
-            git config --global user.name "Your Name"
+            git config --global user.email "deswafyfxd@outlook.com"
+            git config --global user.name "deswafyfxd"
             git add otp_log.txt
             git commit -m "Update otp_log.txt"
-            git push https://$ACTIONS_PAT@github.com/your-username/your-repo.git
+            git push https://$ACTIONS_PAT@github.com/deswafyfxd/testnumb.git
           fi;
           sleep 10;  # Adjust time interval as needed
         done
